end of day 4/22/15

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -45,21 +45,33 @@
                 </div>
                 <div id="content" class="col-sm-4">
                     <div class="panel panel-default">
-                    <div role="tabpanel" class="panel-heading">
+                    <div role="tabpanel">
                         <ul id="loctabs" class="nav nav-tabs" role="tablist">
-                            <li role="presentation" class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
+                            <li role="presentation" class="active"><a href="#home" role="tab">Home</a></li>
                         </ul>
 
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane active" id="home">
+                                <p>You awaken in a haze, in the middle of the wilderness. You have no possessions on you,
+                                   and no recollection of your surroundings or how you got here. There's a fear dwelling
+                                   on the edge of your conscious awareness... A feeling that you were running from something
+                                   quite dangerous. But there's no signs of a recent struggle, and you're uninjured.
+                                   <br><br>
+                                   It looks like you'll have to look around and get your bearings first. (Press "Explore" to
+                                   discover new locations. So far there's little to set locations apart from each other, but
+                                   that's one of the next tasks on my list!)
+                                </p>
                                 <div class="explore btn btn-default">Explore</div>
                             </div>
                         </div>
                     </div>
                     </div>
                 </div>
-                <div class="col-sm-4 panel panel-default">
-                    <div id="msglog"></div>
+                <div class="col-sm-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">Message log (newest entries first)</div>
+                        <div id="msglog" class="panel-body"></div>
+                    </div>
                 </div>
             </div>
             <div class="row">
