Feedback Friday release 1

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,7 +29,7 @@
                 <div id="header" class="page-header"><h3 class="center">Incremental RPG</h3></div>
             </div>
             <div class="row">
-                <div id="left" class="col-sm-4">
+                <div id="left" class="col-sm-3">
                     <div class="panel panel-default">
                     <div class="panel-heading">Character Stats</div>
                     <div class="panel-body">
@@ -43,7 +43,7 @@
                     </div>
                     </div>
                 </div>
-                <div id="content" class="col-sm-4">
+                <div id="content" class="col-sm-5">
                     <div class="panel panel-default">
                     <div role="tabpanel">
                         <ul id="loctabs" class="nav nav-tabs" role="tablist">
@@ -58,8 +58,8 @@
                                    quite dangerous. But there's no signs of a recent struggle, and you're uninjured.
                                    <br><br>
                                    It looks like you'll have to look around and get your bearings first. (Press "Explore" to
-                                   discover new locations. So far there's little to set locations apart from each other, but
-                                   that's one of the next tasks on my list!)
+                                   discover new locations. Location difficulty and rewards are based on your level when you
+                                   first discover them.)
                                 </p>
                                 <div class="explore btn btn-default">Explore</div>
                             </div>
