--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="row">
-                <div id="footer" class="col-sm-12"><p>Version 0.01</p></div>
+                <div id="footer" class="col-sm-12"><p>Last updated 4/24/15</p></div>
             </div>
         </div>
         
