--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                         <div class="panel-heading">Message log (newest entries first)</div>
                         <div id="msglog" class="panel-body"></div>
                     </div>
+                    <div id="options">
+                        <div class="reset btn btn-default">Reset save (no confirmation!)</div>
+                    </div>
                 </div>
             </div>
             <div class="row">
